# ai-mobile

./: .gitignore  CMakeLists.txt  Makefile  README.md  partitions_16mb.csv  platformio.ini  requires01.md  sdkconfig.defaults
assets/books/: auto_page.txt  real_bainian.txt  real_huozhe.txt  real_santi.txt  santi.txt
assets/fonts/: sim_zh12.h  sim_zh14.h  sim_zh16.h  sim_zh18.h  sim_zh20.h  sim_zh22.h  sim_zh24.h
docs/: OPERATION_MANUAL.md  PROGRESS.md  WEATHER_WIDGET_IMPLEMENTATION.md
docs/superpowers/: CURRENT_TARGET.md
docs/superpowers/plans/: 2026-06-17-font-layout-system.md  2026-06-17-reader-depth-flow.md  2026-06-17-reader-simulator-chinese-full.md  2026-06-17-reader-simulator.md  2026-06-17-sdl2-full-simulator.md  2026-06-18-esp32-hardware-skeleton.md  2026-06-23-app-persistence.md
snapshots/: latest
src/: CMakeLists.txt  main.c  main_esp.c  main_sdl.c
src/app/: app_persistence.c  app_persistence.h  app_state.c  app_state.h  reader_library.c  reader_library.h
src/font/: font.c  font.h
src/gfx/: gfx.c  gfx.h
src/platform/: epd_frame.c  epd_frame.h  esp_board_config.h  esp_display.c  esp_display.h  esp_input.c  esp_input.h  input_debounce.c  input_debounce.h  sdl_display.c  sdl_display.h  sim_display.c  sim_display.h
src/ui/: icons.c  icons.h  pages.c  pages.h
tests/: test_external_font  test_external_font.c  test_runner.c
tools/: capture_snapshots.py  create_sample_icons.py  create_weather_icons.py  demo_weather_icons.py  demo_weather_types.py  generate_font.py  generate_icons.py  test_weather_icons.py
(+6 files in other folders)
